--- a/src/OpenXcom.2010.vcxproj
+++ b/src/OpenXcom.2010.vcxproj
@@ -359,6 +359,7 @@
     <ClCompile Include="Geoscape\DefeatState.cpp" />
     <ClCompile Include="Geoscape\DogfightState.cpp" />
     <ClCompile Include="Geoscape\ResearchRequiredState.cpp" />
+    <ClCompile Include="Geoscape\SoldierDiedState.cpp" />
     <ClCompile Include="Geoscape\VictoryState.cpp" />
     <ClCompile Include="Geoscape\NewPossibleManufactureState.cpp" />
     <ClCompile Include="Geoscape\PsiTrainingState.cpp" />
@@ -642,6 +643,7 @@
     <ClInclude Include="Geoscape\DogfightState.h" />
     <ClInclude Include="Geoscape\FundingState.h" />
     <ClInclude Include="Geoscape\ResearchRequiredState.h" />
+    <ClInclude Include="Geoscape\SoldierDiedState.h" />
     <ClInclude Include="Geoscape\VictoryState.h" />
     <ClInclude Include="Geoscape\GeoscapeCraftState.h" />
     <ClInclude Include="Geoscape\NewPossibleManufactureState.h" />
