--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ CMakeLists.txt
 /docs/
 
 # -install
-#/install/
+/install/
 
 # -m4
 /m4/
@@ -57,8 +57,8 @@ CMakeLists.txt
 
 # -res
 #res/linux/icons
-#/res/linux/
-#/res/mac/
+/res/linux/
+/res/mac/
 
 # -src
 /src/ipch/
