--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ CMakeLists.txt
 
 
 # -bin/Win32
-/bin/Win32/Debug/
-/bin/Win32/Release/
+#/bin/Win32/Debug/
+#/bin/Win32/Release/
 
 # -cmake
 /cmake/
@@ -48,24 +48,24 @@ CMakeLists.txt
 
 # -install
 /install/
-/install/debian/
-/install/debian/patches/
-/install/debian/source/
-/install/gentoo/
-/install/opensuse/
-/install/win/
+#/install/debian/
+#/install/debian/patches/
+#/install/debian/source/
+#/install/gentoo/
+#/install/opensuse/
+#/install/win/
 
 # -m4
 /m4/
 
 # -obj/Win32
-/obj/Win32/
+#/obj/Win32/
 
 # -res
-/res/linux/icons/
+#/res/linux/icons/
 /res/linux/
 /res/mac/
-/res/
+#/res/
 
 # -src
 /src/ipch/
@@ -73,4 +73,4 @@ CMakeLists.txt
 
 # -temp
 /temp/
-/temp/*
+#/temp/*
